--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>D'Maria Decorações</title>
-    <link rel="shortcut icon" href="./images/dmarialogo-removebg.png" type="image/x-icon">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="/images/dmarialogo-removebg.png" type="image/x-icon">
+    <link rel="stylesheet" href="/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
@@ -18,11 +18,11 @@
     <!-- HEADER -->
     <header class="d-flex justify-content-between padding-container light-background shadow-sm">
         <!-- RECORTAR AS LATERAIS DA LOGO PRA HEADER FICAR CORRETA -->
-        <img src="./images/dmarialogo.png" alt="Logo D'Maria Decorações" class="">
+        <img src="/images/dmarialogo.png" alt="Logo D'Maria Decorações" class="">
         <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 
         <div class="right-side d-flex align-items-center">
-            <a href="./pages/carrinhoCompras.html">
+            <a href="/pages/carrinhoCompras.html">
                 <i class="fa-solid fa-cart-shopping medium-color fs-5"></i>
             </a>
             
@@ -56,15 +56,15 @@
                                     </a>
                                     <ul class="dropdown-menu dropdown-menu light-background">
                                         <li><a class="dropdown-item medium-color"
-                                                href="./pages/alugarProdutos.html?category=bolo">Bolo
+                                                href="/pages/alugarProdutos.html?category=bolo">Bolo
                                                 Fake</a></li>
                                         <li><a class="dropdown-item medium-color"
-                                                href="./pages/decoracao.html">Decorações</a></li>
+                                                href="/pages/decoracao.html">Decorações</a></li>
                                         <li><a class="dropdown-item medium-color"
-                                                href="./pages/comprarProdutos.html">Para
+                                                href="/pages/comprarProdutos.html">Para
                                                 Comprar</a></li>
                                         <li><a class="dropdown-item medium-color"
-                                                href="./pages/alugarProdutos.html?category=monte">Pegue e
+                                                href="/pages/alugarProdutos.html?category=monte">Pegue e
                                                 Monte</a></li>
                                     </ul>
                                 </li>
@@ -100,7 +100,7 @@
         <section class="products-preview mb-5">
             <div class="d-flex justify-content-between">
                 <h4>Para Comprar</h4>
-                <a href="./pages/comprarProdutos.html" class="btn">Ver mais ></a>
+                <a href="/pages/comprarProdutos.html" class="btn">Ver mais ></a>
             </div>
 
             <div class="products d-flex" id="comprarProdutos"></div>
@@ -111,7 +111,7 @@
         <section class="products-preview mb-5">
             <div class="d-flex justify-content-between">
                 <h4>Pegue e Monte</h4>
-                <a href="./pages/alugarProdutos.html?category=monte" class="btn" id="indexMonte">Ver mais ></a>
+                <a href="/pages/alugarProdutos.html?category=monte" class="btn" id="indexMonte">Ver mais ></a>
             </div>
 
             <div class="products d-flex" id="normalKits"></div>
@@ -122,7 +122,7 @@
         <section class="products-preview mb-5">
             <div class="d-flex justify-content-between">
                 <h4>Bolos Fake</h4>
-                <a href="./pages/alugarProdutos.html?category=bolo" class="btn" id="indexBolo">Ver mais ></a>
+                <a href="/pages/alugarProdutos.html?category=bolo" class="btn" id="indexBolo">Ver mais ></a>
             </div>
 
             <div class="products d-flex" id="boloFake"></div>
@@ -137,9 +137,9 @@
     </footer>
 
 
-    <script src="./js/main.js"></script>
+    <script src="/js/main.js"></script>
 
-    <script src="./js/templates.js"></script>
+    <script src="/js/templates.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
