--- a/pages/alugarProdutos.html
+++ b/pages/alugarProdutos.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>D'Maria Decorações</title>
-    <link rel="shortcut icon" href="../images/dmarialogo-removebg.png" type="image/x-icon">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="/images/dmarialogo-removebg.png" type="image/x-icon">
+    <link rel="stylesheet" href="/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
@@ -19,11 +19,11 @@
     <!-- HEADER -->
     <header class="d-flex justify-content-between padding-container light-background shadow-sm">
         <!-- RECORTAR AS LATERAIS DA LOGO PRA HEADER FICAR CORRETA -->
-        <img src="../images/dmarialogo.png" alt="Logo D'Maria Decorações">
+        <img src="/images/dmarialogo.png" alt="Logo D'Maria Decorações">
         <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 
         <div class="right-side d-flex align-items-center">
-            <a href="./carrinhoCompras.html">
+            <a href="/pages/carrinhoCompras.html">
                 <i class="fa-solid fa-cart-shopping medium-color fs-5"></i>
             </a>
 
@@ -48,7 +48,7 @@
 
                             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                                 <li class="nav-item ">
-                                    <a class="nav-link medium-color" aria-current="page" href="../index.html">Início</a>
+                                    <a class="nav-link medium-color" aria-current="page" href="/index.html">Início</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle medium-color" href="#" role="button"
@@ -57,14 +57,14 @@
                                     </a>
                                     <ul class="dropdown-menu dropdown-menu light-background">
                                         <li><a class="dropdown-item medium-color"
-                                                href="./alugarProdutos.html?category=bolo">Bolo
+                                                href="/pages/alugarProdutos.html?category=bolo">Bolo
                                                 Fake</a></li>
-                                        <li><a class="dropdown-item medium-color" href="./decoracao.html">Decorações</a>
+                                        <li><a class="dropdown-item medium-color" href="/pages/decoracao.html">Decorações</a>
                                         </li>
-                                        <li><a class="dropdown-item medium-color" href="./comprarProdutos.html">Para
+                                        <li><a class="dropdown-item medium-color" href="/pages/comprarProdutos.html">Para
                                                 Comprar</a></li>
                                         <li><a class="dropdown-item medium-color"
-                                                href="./alugarProdutos.html?category=monte">Pegue e
+                                                href="/pages/alugarProdutos.html?category=monte">Pegue e
                                                 Monte</a></li>
                                     </ul>
                                 </li>
@@ -172,9 +172,9 @@
     </footer>
 
 
-    <script src="../js/main.js"></script>
+    <script src="/js/main.js"></script>
 
-    <script src="../js/templates.js"></script>
+    <script src="/js/templates.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
